# outvie

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Procfile  README.md  biome.json  docker-compose.yml  env.example  package.json  tsconfig.json
apps/server/: package.json
apps/server/src/: config.ts  cors.ts  index.ts  spa.ts  state.ts
apps/server/src/auth/: index.ts
apps/server/src/routes/: games.ts  health.ts  index.ts  rom.ts  saves.ts  stream.ts
apps/server/src/sso/: index.ts
apps/server/src/ws/: proxy.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: audioworklet.js
apps/web/src/: main.tsx
apps/web/src/api/: auth.ts  index.ts
apps/web/src/app/: index.tsx  shell.tsx
apps/web/src/emulator/: index.ts
apps/web/src/emulator/local/: index.ts
apps/web/src/emulator/remote/: audio.ts  index.ts  input.ts
apps/web/src/play/: context.tsx  gamepad.ts  hud.tsx  index.tsx  stage.tsx
apps/web/src/theme/: global.css  index.ts  system.ts
castle/: app.ts
docs/: ARCHITECTURE.md  DEPLOY.md
engine/: Cargo.toml
engine/src/: catalog.rs  config.rs  main.rs  manager.rs  session.rs
engine/src/cores/: libretro.rs  mod.rs  nes.rs
engine/src/routes/: sessions.rs  ws.rs
migrations/00000001_init/: down.sql  up.sql
migrations/00000002_saves/: down.sql  up.sql
scripts/: dev.ts  entrypoint.sh  seed.ts
