[package]
name = "outvie-engine"
version = "0.1.0"
edition = "2021"
description = "Server-side emulation and frame streaming for Outvie"
license = "MIT"

[[bin]]
name = "outvie-engine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "fs"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6"
anyhow = "1"
tetanes-core = "0.14"
futures-util = "0.3"
libloading = "0.8"
zstd = { version = "0.13", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
